Added a Quick/Sketch Category
Added a new category: Quick/Sketch, for art pieces that I did in a shorter period of time / without the same level of polish as my usual stuff.

Added a dropdown menu for accessing the different categories

Restructured folders a bit

Updated some gems

--- a/_posts/Main/2018-01-08-snooze.md
+++ b/_posts/Main/2018-01-08-snooze.md
@@ -11,5 +11,5 @@ artThumb: /assets/thumbnails/thumb_snooze.png
 artTwitter: https://twitter.com/GhostTyrant/status/977672966237573120
 artMastodon: https://mastodon.art/@GhostTyrant
 
-tags: art test
+tags: polished
 ---
