--- a/_posts/Main/2019-08-28-merlin.md
+++ b/_posts/Main/2019-08-28-merlin.md
@@ -11,5 +11,5 @@ artThumb: /assets/thumbnails/thumb_merlin.png
 artTwitter: https://twitter.com/GhostTyrant/status/1213848535029964800
 artMastodon: https://mastodon.art/@GhostTyrant
 
-tags: art test
+tags: polished
 ---
