--- a/_posts/Main/2017-11-04-grimm.md
+++ b/_posts/Main/2017-11-04-grimm.md
@@ -11,5 +11,5 @@ artThumb: /assets/thumbnails/thumb_grimm.png
 artTwitter: https://twitter.com/GhostTyrant/status/928341195486580736
 artMastodon: https://mastodon.art/@GhostTyrant
 
-tags: art test
+tags: polished
 ---
