--- a/_posts/Main/2019-08-05-scraps.md
+++ b/_posts/Main/2019-08-05-scraps.md
@@ -11,5 +11,5 @@ artThumb: /assets/thumbnails/thumb_scraps.png
 artTwitter: https://twitter.com/GhostTyrant/status/1145087212188573696
 artMastodon: https://mastodon.art/@GhostTyrant
 
-tags: art test
+tags: polished
 ---
