--- a/_posts/Main/2019-10-01-nero.md
+++ b/_posts/Main/2019-10-01-nero.md
@@ -11,5 +11,5 @@ artThumb: /assets/thumbnails/thumb_nero.png
 artTwitter: https://twitter.com/GhostTyrant/
 artMastodon: https://mastodon.art/@GhostTyrant
 
-tags: art test
+tags: polished
 ---
