--- a/_posts/Main/2020-06-19-ghost-2020.md
+++ b/_posts/Main/2020-06-19-ghost-2020.md
@@ -11,5 +11,5 @@ artThumb: /assets/thumbnails/thumb_ghost2020.png
 artTwitter: https://twitter.com/GhostTyrant/
 artMastodon: https://mastodon.art/@GhostTyrant
 
-tags: art test
+tags: polished
 ---
