--- a/_posts/Main/2017-11-04-grimm.md
+++ b/_posts/Main/2017-11-04-grimm.md
@@ -8,8 +8,8 @@ artDesc: Fanart - Hollow Knight
 artYear: 2017
 artPath: /assets/fullsize/fullsize_grimm.png
 artThumb: /assets/thumbnails/thumb_grimm.png
-artTwitter: https://twitter.com/GhostTyrant/status/928341195486580736
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
