--- a/_posts/Main/2018-01-08-snooze.md
+++ b/_posts/Main/2018-01-08-snooze.md
@@ -8,8 +8,8 @@ artDesc: Original Work
 artYear: 2018
 artPath: /assets/fullsize/fullsize_snooze.png
 artThumb: /assets/thumbnails/thumb_snooze.png
-artTwitter: https://twitter.com/GhostTyrant/status/977672966237573120
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
