--- a/_posts/Main/2019-08-05-scraps.md
+++ b/_posts/Main/2019-08-05-scraps.md
@@ -4,12 +4,12 @@ title:  Scraps - GhostTyrant
 date:   2019-08-05
 
 artTitle: Scraps
-artDesc: Original Work - DnD Paper Mini
+artDesc: Original Work
 artYear: 2019
 artPath: /assets/fullsize/fullsize_scraps.png
 artThumb: /assets/thumbnails/thumb_scraps.png
-artTwitter: https://twitter.com/GhostTyrant/status/1145087212188573696
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+A papercraft mini of my D&D character, Scraps!
