--- a/_posts/Main/2019-08-28-merlin.md
+++ b/_posts/Main/2019-08-28-merlin.md
@@ -8,8 +8,8 @@ artDesc: Original Work
 artYear: 2019
 artPath: /assets/fullsize/fullsize_merlin.png
 artThumb: /assets/thumbnails/thumb_merlin.png
-artTwitter: https://twitter.com/GhostTyrant/status/1213848535029964800
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
