--- a/_posts/Main/2019-11-24-sofie.md
+++ b/_posts/Main/2019-11-24-sofie.md
@@ -8,8 +8,8 @@ artDesc: Original Work
 artYear: 2019
 artPath: /assets/fullsize/fullsize_sofie.png
 artThumb: /assets/thumbnails/thumb_sofie.png
-artTwitter: https://twitter.com/GhostTyrant/
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
