--- a/_posts/Sketch/2021-01-24-cosmoSk.md
+++ b/_posts/Sketch/2021-01-24-cosmoSk.md
@@ -8,8 +8,8 @@ artDesc: Original Work
 artYear: 2021
 artPath: /assets/sk_fullsize/fullsize_cosmoSk.png
 artThumb: /assets/sk_thumbnails/thumb_cosmoSk.png
-artTwitter: https://twitter.com/GhostTyrant
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: sketch
 ---
+
+From my ongoing project: [COSMO]({{site.baseurl}}/2021/12/31/cosmo.html)
