--- a/_posts/Sketch/2021-07-17-shark.md
+++ b/_posts/Sketch/2021-07-17-shark.md
@@ -8,8 +8,8 @@ artDesc: Original Work
 artYear: 2021
 artPath: /assets/sk_fullsize/fullsize_shark.png
 artThumb: /assets/sk_thumbnails/thumb_shark.png
-artTwitter: https://twitter.com/GhostTyrant
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: sketch
 ---
+
+NO ADDITIONAL INFO
