--- a/_posts/Main/2018-02-04-honedge.md
+++ b/_posts/Main/2018-02-04-honedge.md
@@ -8,8 +8,8 @@ artDesc: Fanart - Pokemon
 artYear: 2018
 artPath: /assets/fullsize/fullsize_honedge.png
 artThumb: /assets/thumbnails/thumb_honedge.png
-artTwitter: https://twitter.com/GhostTyrant/
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
