--- a/_posts/Main/2019-10-01-nero.md
+++ b/_posts/Main/2019-10-01-nero.md
@@ -8,8 +8,8 @@ artDesc: Fanart - Devil May Cry 5
 artYear: 2019
 artPath: /assets/fullsize/fullsize_nero.png
 artThumb: /assets/thumbnails/thumb_nero.png
-artTwitter: https://twitter.com/GhostTyrant/
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
