--- a/_posts/Main/2020-06-19-ghost-2020.md
+++ b/_posts/Main/2020-06-19-ghost-2020.md
@@ -8,8 +8,8 @@ artDesc: Original Work
 artYear: 2020
 artPath: /assets/fullsize/fullsize_ghost2020.png
 artThumb: /assets/thumbnails/thumb_ghost2020.png
-artTwitter: https://twitter.com/GhostTyrant/
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
