--- a/_posts/Main/2021-07-05-yeehaw.md
+++ b/_posts/Main/2021-07-05-yeehaw.md
@@ -10,8 +10,8 @@ artDesc: Fanart - BEETLEJUICE The Musical
 artYear: 2021
 artPath: /assets/fullsize/fullsize_yeehaw.png
 artThumb: /assets/thumbnails/thumb_yeehaw.png
-artTwitter: https://twitter.com/GhostTyrant/
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+BEETLEJUICE design inspired by [Shnikkles!](https://twitter.com/Shnikkles)
