--- a/_posts/Main/2022-01-17-nemesis.md
+++ b/_posts/Main/2022-01-17-nemesis.md
@@ -9,8 +9,8 @@ artDesc: >
 artYear: 2022
 artPath: /assets/fullsize/fullsize_nemesis.png
 artThumb: /assets/thumbnails/thumb_nemesis.png
-artTwitter: https://twitter.com/GhostTyrant/
-artMastodon: https://mastodon.art/@GhostTyrant
 
 tags: polished
 ---
+
+NO ADDITIONAL INFO
