--- a/_posts/Projects/2022-12-31-cosmo.md
+++ b/_posts/Projects/2022-12-31-cosmo.md
@@ -1,7 +1,7 @@
 ---
 layout: projectPost
 title: COSMO - GhostTyrant
-date:   2021-12-31
+date:   2022-12-31
 
 artTitle: COSMO
 monthYear: ONGOING
@@ -29,6 +29,10 @@ tags: project
 
 {:refdef: style="text-align: center;"}
 ![two](/assets/projects/cosmo_1.gif)
+{: refdef}
+
+{:refdef: style="text-align: center;"}
+![door](/assets/projects/cosmo_4.gif)
 {: refdef}
 
 {:refdef: style="text-align: center;"}
