--- a/_posts/Projects/2022-12-31-cosmo.md
+++ b/_posts/Projects/2022-12-31-cosmo.md
@@ -5,7 +5,7 @@ date:   2022-12-31
 
 artTitle: COSMO
 monthYear: ONGOING
-projectRole: It's all me babey.
+projectRole: It's all me. Art! Code! Design!
 
 artThumb: /assets/projects/thumbnails/thumb_cosmo.png
 headerPath: /assets/projects/headers/header_cosmo.png
@@ -15,8 +15,11 @@ tags: project
 
 <b>COSMO</b> is an ongoing project about <b>gay ghosts</b>.
 <br>
-<br>I sometimes post updates on my blog. Right now I am doing everything myself, so it's taking a while.
+<br>I sometimes post updates on my blog. Right now I am doing everything myself and in my own time, so it's taking a while.
 <br>
+<br>COSMO game has platforming, exploration, inventory, combat, cutscene and dialogue systems built largely from scratch.
+<br>Built using [Otter2D](http://otter2d.com/) (but due to be ported to a newer engine soon) and [Moonsharp](https://www.moonsharp.org/)/Lua (for scripting).
+
 <br>
 
 {:refdef: style="text-align: center;"}
