--- a/_posts/Projects/2022-12-31-cosmo.md
+++ b/_posts/Projects/2022-12-31-cosmo.md
@@ -17,7 +17,7 @@ tags: project
 <br>
 <br>I sometimes post updates on my blog. Right now I am doing everything myself and in my own time, so it's taking a while.
 <br>
-<br>COSMO game has platforming, exploration, inventory, combat, cutscene and dialogue systems built largely from scratch.
+<br>COSMO has platforming, exploration, inventory, combat, cutscene and dialogue systems built largely from scratch.
 <br>Built using [Otter2D](http://otter2d.com/) (but due to be ported to a newer engine soon) and [Moonsharp](https://www.moonsharp.org/)/Lua (for scripting).
 
 <br>
