project links and wording updates

--- a/_posts/Projects/2021-09-05-psifrost.md
+++ b/_posts/Projects/2021-09-05-psifrost.md
@@ -20,12 +20,12 @@ Play [here!](https://johnjoemcbob.itch.io/psifrost)
 <br>Watch a walkthrough [here!](https://www.youtube.com/watch?v=0RxQrR5cy2Q)
 
 <b>Teammates</b>
-<br>[BandiBev](https://twitter.com/BandiBev) - VA
-<br>[DrMelon](https://twitter.com/DrMelon) - Code / VFX / Cinematics / VA
-<br>[johnjoemcbob](https://twitter.com/johnjoemcbob) - Code / Physics / VA
-<br>[leafcodes](https://twitter.com/leafcodes) - Code / Music / VA
-<br>[SunshineMoonRX](https://twitter.com/SunshineMoonRX) - Writing / Narrative / Characters
-<br>[tackyvillain](https://twitter.com/tackyvillain) - Vehicle Models / Environment Props / VA
+<br>BandiBev - VA
+<br>[DrMelon]({{site.itch_drmelon}}) - Code / VFX / Cinematics / VA
+<br>[johnjoemcbob]({{site.itch_johnjoemcbob}}) - Code / Physics / VA
+<br>[leafcodes]({{site.itch_leafcodes}}) - Code / Music / VA
+<br>[SunshineMoonRX]({{site.itch_sunshinemoon}}) - Writing / Narrative / Characters
+<br>[tackyvillain]({{site.itch_tackyvillain}}) - Vehicle Models / Environment Props / VA
 
 Very cool shaders were from [Flatkit](https://assetstore.unity.com/packages/vfx/shaders/flat-kit-toon-shading-and-water-143368)
 
