--- a/_posts/Projects/2022-12-31-cosmo.md
+++ b/_posts/Projects/2022-12-31-cosmo.md
@@ -4,7 +4,7 @@ title: COSMO - GhostTyrant
 date:   2022-12-31
 
 artTitle: COSMO
-monthYear: ONGOING
+monthYear: 2015-2022
 projectRole: It's all me. Art! Code! Design!
 
 artThumb: /assets/projects/thumbnails/thumb_cosmo.png
@@ -13,12 +13,12 @@ headerPath: /assets/projects/headers/header_cosmo.png
 tags: project
 ---
 
-<b>COSMO</b> is an ongoing project about <b>gay ghosts</b>.
+<b>COSMO</b> is a game about <b>gay ghosts</b>.
 <br>
-<br>I sometimes post updates on my blog. Right now I am doing everything myself and in my own time, so it's taking a while.
+<br>I had a lot of big ideas for this project and dedicated much of my free time to developing a solid foundation. Ultimately, this incarnation of the project has been shelved, but the characters and world live on in a new project.
 <br>
-<br>COSMO has platforming, exploration, inventory, combat, cutscene and dialogue systems built largely from scratch.
-<br>Built using [Otter2D](http://otter2d.com/) (but due to be ported to a newer engine soon) and [Moonsharp](https://www.moonsharp.org/)/Lua (for scripting).
+<br>COSMO has lighting, platforming, exploration, inventory, combat, cutscene and dialogue systems built largely from scratch.
+<br>Built using [Otter2D](https://github.com/kylepulver/Otter) and [Moonsharp](https://www.moonsharp.org/)/Lua (for scripting).
 
 <br>
 
