flippinc / bullet points for project teammates

--- a/_posts/Projects/2021-09-05-psifrost.md
+++ b/_posts/Projects/2021-09-05-psifrost.md
@@ -20,14 +20,15 @@ Play [here!](https://johnjoemcbob.itch.io/psifrost)
 <br>Watch a walkthrough [here!](https://www.youtube.com/watch?v=0RxQrR5cy2Q)
 
 <b>Teammates</b>
-<br>BandiBev - VA
-<br>[DrMelon]({{site.itch_drmelon}}) - Code / VFX / Cinematics / VA
-<br>[johnjoemcbob]({{site.itch_johnjoemcbob}}) - Code / Physics / VA
-<br>[leafcodes]({{site.itch_leafcodes}}) - Code / Music / VA
-<br>[SunshineMoonRX]({{site.itch_sunshinemoon}}) - Writing / Narrative / Characters
-<br>[tackyvillain]({{site.itch_tackyvillain}}) - Vehicle Models / Environment Props / VA
+<br><span class="postBullet">★</span> BandiBev - VA
+<br><span class="postBullet">★</span> [DrMelon]({{site.itch_drmelon}}) - Code / VFX / Cinematics / VA
+<br><span class="postBullet">★</span> [johnjoemcbob]({{site.itch_johnjoemcbob}}) - Code / Physics / VA
+<br><span class="postBullet">★</span> [leafcodes]({{site.itch_leafcodes}}) - Code / Music / VA
+<br><span class="postBullet">★</span> [SunshineMoonRX]({{site.itch_sunshinemoon}}) - Writing / Narrative / Characters
+<br><span class="postBullet">★</span> [tackyvillain]({{site.itch_tackyvillain}}) - Vehicle Models / Environment Props / VA
 
-Very cool shaders were from [Flatkit](https://assetstore.unity.com/packages/vfx/shaders/flat-kit-toon-shading-and-water-143368)
+<b>Additional Credits</b>
+<br><span class="postBullet">★</span> Shaders were from [Flatkit](https://assetstore.unity.com/packages/vfx/shaders/flat-kit-toon-shading-and-water-143368)
 
 <br>
 
