petting zoo project / adjusted some wording and font weights

--- a/_posts/Projects/2024-06-30-flippInc.md
+++ b/_posts/Projects/2024-06-30-flippInc.md
@@ -21,6 +21,7 @@ Play [here!](https://biomecollective.itch.io/biome-exquisite-corpse-game-jam-202
 
 <b>Teammates</b>
 <br><span class="postBullet">★</span> [jctwizard]({{site.itch_jctwizard}}) - Design / Writing / Asset Acquisition
+<br><span class="postBullet">★</span> Juno the Cat - Face Model / Moral Support
 
 <br>
 
